--- a/index.html
+++ b/index.html
@@ -6,7 +6,61 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Camille Hurtaud</title>
+
+    <!-- HTML Meta Tags -->
+    <title>Camille Hurtaud - Développeur FullStack</title>
+    <meta
+      name="description"
+      content="Je suis développeur FullStack avec une expertise en Javascript, PHP et Vue.js, combinée à une expérience enrichissante de 9 ans dans l'industrie musicale.
+
+Mon parcours atypique m'a permis de développer une créativité et une adaptabilité, tout en maintenant un engagement constant envers la qualité et l'efficacité.
+
+Je m'engage à apporter cette même énergie et cette même passion à chaque projet, collaborant avec mes clients pour concrétiser leurs idées et atteindre leurs objectifs.
+
+Développeur Fullstack • Freelance
+🚀 Javascript • Vue.js • Next.js • React • Express • Pinia
+❤️ PHP • Slim Framework • DoctrineORM
+🎨 Bootstrap • Tailwind"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://camille-hurtaud.fr/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Camille Hurtaud - Développeur FullStack" />
+    <meta
+      property="og:description"
+      content="Je suis développeur FullStack avec une expertise en Javascript, PHP et Vue.js, combinée à une expérience enrichissante de 9 ans dans l'industrie musicale.
+
+Mon parcours atypique m'a permis de développer une créativité et une adaptabilité, tout en maintenant un engagement constant envers la qualité et l'efficacité.
+
+Je m'engage à apporter cette même énergie et cette même passion à chaque projet, collaborant avec mes clients pour concrétiser leurs idées et atteindre leurs objectifs.
+
+Développeur Fullstack • Freelance
+🚀 Javascript • Vue.js • Next.js • React • Express • Pinia
+❤️ PHP • Slim Framework • DoctrineORM
+🎨 Bootstrap • Tailwind"
+    />
+    <meta property="og:image" content="/share.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="camille-hurtaud.fr" />
+    <meta property="twitter:url" content="https://camille-hurtaud.fr/" />
+    <meta name="twitter:title" content="Camille Hurtaud - Développeur FullStack" />
+    <meta
+      name="twitter:description"
+      content="Je suis développeur FullStack avec une expertise en Javascript, PHP et Vue.js, combinée à une expérience enrichissante de 9 ans dans l'industrie musicale.
+
+Mon parcours atypique m'a permis de développer une créativité et une adaptabilité, tout en maintenant un engagement constant envers la qualité et l'efficacité.
+
+Je m'engage à apporter cette même énergie et cette même passion à chaque projet, collaborant avec mes clients pour concrétiser leurs idées et atteindre leurs objectifs.
+
+Développeur Fullstack • Freelance
+🚀 Javascript • Vue.js • Next.js • React • Express • Pinia
+❤️ PHP • Slim Framework • DoctrineORM
+🎨 Bootstrap • Tailwind"
+    />
+    <meta name="twitter:image" content="/share.png" />
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
